--- a/_layouts/wenzhang.html
+++ b/_layouts/wenzhang.html
@@ -1,10 +1,6 @@
 ---
----
-{% include header.html %}
-<!-- ---
 layout: base
 ---
- -->
 
     <div class="container">
       <div class="row">
@@ -12,34 +8,25 @@ layout: base
         <main class="post blog-post col-lg-8">
           <div class="container">
             <div class="post-single">
-              <div class="post-thumbnail"><img src="img/blog-post-3.jpeg" alt="..." class="img-fluid"></div>
+              <div class="post-thumbnail"><img src="{{site.baseurl}}/img/blog-post-3.jpeg" alt="..." class="img-fluid"></div>
               <div class="post-details">
                 <div class="post-meta d-flex justify-content-between">
-                  <div class="category"><a href="#">Business</a><a href="#">Financial</a></div>
+                  <div class="category"><a href="#">{{page.title}}</a></div>
                 </div>
-                <h1>Diversity in Engineering: The Effect on Questions<a href="#"><i class="fa fa-bookmark-o"></i></a></h1>
+                <h1>{{page.title1}}<a href="#"><i class="fa fa-bookmark-o"></i></a></h1>
                 <div class="post-footer d-flex align-items-center flex-column flex-sm-row"><a href="#" class="author d-flex align-items-center flex-wrap">
-                    <div class="avatar"><img src="img/avatar-1.jpg" alt="..." class="img-fluid"></div>
-                    <div class="title"><span>天天</span></div></a>
+                    <div class="avatar"><img src="{{site.baseurl}}/img/avatar-1.jpg" alt="..." class="img-fluid"></div>
+                    <div class="title"><span>{{post.author|default:site.author}}</span></div></a>
                   <div class="d-flex align-items-center flex-wrap">
                     <div class="date"><i class="icon-clock"></i> 2 月以前</div>
-                    <div class="views"><i class="icon-eye"></i> 500</div>
+                    <div class="views"><i class="icon-eye"></i> {{post.date|date_to_long_string}}</div>
                     <div class="comments meta-last"><i class="icon-comment"></i>12</div>
                   </div>
                 </div>
                 <div class="post-body">
-                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <p> <img src="img/featured-pic-3.jpeg" alt="..." class="img-fluid"></p>
-                  <h3>Lorem Ipsum Dolor</h3>
-                  <p>div Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda temporibus iusto voluptates deleniti similique rerum ducimus sint ex odio saepe. Sapiente quae pariatur ratione quis perspiciatis deleniti accusantium</p>
-                  <blockquote class="blockquote">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-                    <footer class="blockquote-footer">Someone famous in
-                      <cite title="Source Title">Source Title</cite>
-                    </footer>
-                  </blockquote>
-                  <p>quasi nam. Libero dicta eum recusandae, commodi, ad, autem at ea iusto numquam veritatis, officiis. Accusantium optio minus, voluptatem? Quia reprehenderit, veniam quibusdam provident, fugit iusto ullam voluptas neque soluta adipisci ad.</p>
+
+{{content}}
+
                 </div>
               </div>
             </div>
@@ -65,7 +52,7 @@ layout: base
             </header>
             <div class="blog-posts"><a href="#">
                 <div class="item d-flex align-items-center">
-                  <div class="image"><img src="img/small-thumbnail-1.jpg" alt="..." class="img-fluid"></div>
+                  <div class="image"><img src="{{site.baseurl}}/img/small-thumbnail-1.jpg" alt="..." class="img-fluid"></div>
                   <div class="title"><strong>Alberto Savoia Can Teach You About</strong>
                     <div class="d-flex align-items-center">
                       <div class="views"><i class="icon-eye"></i> 500</div>
@@ -74,7 +61,7 @@ layout: base
                   </div>
                 </div></a><a href="#">
                 <div class="item d-flex align-items-center">
-                  <div class="image"><img src="img/small-thumbnail-2.jpg" alt="..." class="img-fluid"></div>
+                  <div class="image"><img src="{{site.baseurl}}/img/small-thumbnail-2.jpg" alt="..." class="img-fluid"></div>
                   <div class="title"><strong>Alberto Savoia Can Teach You About</strong>
                     <div class="d-flex align-items-center">
                       <div class="views"><i class="icon-eye"></i> 500</div>
@@ -83,7 +70,7 @@ layout: base
                   </div>
                 </div></a><a href="#">
                 <div class="item d-flex align-items-center">
-                  <div class="image"><img src="img/small-thumbnail-3.jpg" alt="..." class="img-fluid"></div>
+                  <div class="image"><img src="{{site.baseurl}}/img/small-thumbnail-3.jpg" alt="..." class="img-fluid"></div>
                   <div class="title"><strong>Alberto Savoia Can Teach You About</strong>
                     <div class="d-flex align-items-center">
                       <div class="views"><i class="icon-eye"></i> 500</div>
@@ -117,7 +104,18 @@ layout: base
             </ul>
           </div>
         </aside>
-      </div>
+
+   <div class="row">
+        <div class="clearfix">
+          {% if page.next %}
+            <a class="btn btn-primary float-left" href="{{site.baseurl}}/{{page.next.url}}">上一篇：{{page.next.title}} </a>
+          {% endif %}
+          {% if page.previous %}
+            <a class="btn btn-primary float-right" href="{{site.baseurl}}/{{page.previous.url}}">下一篇：{{page.previous.title}} </a>
+          {% endif %}
+        </div>
     </div>
 
- {% include footer.html %}
+
+      </div>
+    </div>
